# usbhotplug

./: .gitignore  CMakeLists.txt  Makefile  main.c
libsrc/: daemon.c  daemon.h  global.h  local_ip_mac.c  local_ip_mac.h  singleton.c  singleton.h  switch_to_json.c  switch_to_json.h  usb_chandle_task.c  usb_chandle_task.h  usb_node_list.c  usb_node_list.h
libsrc/json/: json_inttypes.h
